--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@getstoryteller/react-native-storyteller-sdk": "file:getstoryteller-react-native-storyteller-sdk-0.9.0.tgz",
     "react": "17.0.2",
     "react-native": "0.66.0"
   },
