--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,20 +1,21 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+source 'https://cdn.cocoapods.org/'
 source 'https://github.com/getstoryteller/storyteller-sdk-ios-podspec.git'
-source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '11.0'
+#use_frameworks!
 
 target 'StorytellerReactNative' do
   config = use_native_modules!
-  use_frameworks!
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
 
-  pod 'Texture', :git => 'https://github.com/getstoryteller/Texture.git', :branch => '3.0.0-rc.2'
+  pod 'Texture', :git => 'https://github.com/getstoryteller/Texture.git',  :branch => '3.0.0-rc.2'
 
   target 'StorytellerReactNativeTests' do
     inherit! :complete
@@ -25,10 +26,24 @@ target 'StorytellerReactNative' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  # use_flipper!()
+  use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+  end
+  
+  dynamic_frameworks = ['StorytellerSDK', 'Texture', 'PINRemoteImage', 'PINOperation', 'PINCache']
+  pre_install do |installer|
+    installer.pod_targets.each do |pod|
+      if dynamic_frameworks.include?(pod.name)
+        def pod.dynamic_framework?;
+          true
+        end
+        def pod.build_type;
+          Pod::BuildType.dynamic_framework
+        end
+      end
+    end
   end
 end
